--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,9 @@ project(raptor)
 find_package(KDE4 REQUIRED)
 include(KDE4Defaults)
 find_package(Plasma REQUIRED)
- 
+
+add_subdirectory(widget)
+
 add_definitions (${QT_DEFINITIONS} ${KDE4_DEFINITIONS})
 include_directories(
    ${CMAKE_SOURCE_DIR}
