--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -8,7 +8,7 @@ set(raptor_engine_SRCS
 )
 
 kde4_add_plugin(plasma_engine_raptor ${raptor_engine_SRCS})
-target_link_libraries(plasma_engine_raptor ${KDE4_KDECORE_LIBS} ${PLASMA_LIBS})
+target_link_libraries(plasma_engine_raptor ${KDE4_KDECORE_LIBS} ${PLASMA_LIBS} ${QT_QTGUI_LIBRARY})
 
 install(TARGETS plasma_engine_raptor DESTINATION ${PLUGIN_INSTALL_DIR})
 install(FILES plasma-engine-raptor.desktop DESTINATION ${SERVICES_INSTALL_DIR})
