--- a/engine/plasma-engine-raptor.desktop
+++ b/engine/plasma-engine-raptor.desktop
@@ -5,6 +5,7 @@ X-KDE-ServiceTypes=Plasma/DataEngine
 Type=Service
 Icon=
 X-KDE-Library=plasma_engine_raptor
+X-Plasma-EngineName=raptor
 
 X-KDE-PluginInfo-Author=Lukas Appelhans
 X-KDE-PluginInfo-Email=l.appelhans@gmx.de
