added first basic implementation of RaptorItemDelegate

--- a/view/test/CMakeLists.txt
+++ b/view/test/CMakeLists.txt
@@ -20,6 +20,7 @@ set(itemsviewtest_SRCS
     model/kickoffabstractmodel.cpp
     model/leavemodel.cpp
     model/models.cpp
+    ../raptoritemdelegate.cpp
 )
 
 kde4_add_executable(itemsviewtest ${itemsviewtest_SRCS})
