--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,13 +21,18 @@ include_directories(
 # We add our source code here
 set(raptor_SRCS 
     raptor.cpp
-#    view/raptoritemsview.cpp # When starting implementing raptoritemsview include also engine/kickoff/*
+    view/raptoritemsview.cpp # When starting implementing raptoritemsview include also engine/kickoff/*
+    view/raptoritemdelegate.cpp
+    engine/kickoff/applicationmodel.cpp
+    engine/kickoff/kickoffabstractmodel.cpp
+    engine/kickoff/models.cpp
+    engine/kickoff/leavemodel.cpp
 )
  
 # Now make sure all files get to the right place
 kde4_add_plugin(plasma_applet_raptor ${raptor_SRCS})
 target_link_libraries(plasma_applet_raptor 
-                      ${PLASMA_LIBS} ${KDE4_KDEUI_LIBS})
+                      ${PLASMA_LIBS} ${KDE4_KDEUI_LIBS} ${KDE4_SOLID_LIBS} solidcontrol)
  
 install(TARGETS plasma_applet_raptor
         DESTINATION ${PLUGIN_INSTALL_DIR})
