--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,3 +43,4 @@ install(FILES plasma-applet-raptor.desktop
         DESTINATION ${SERVICES_INSTALL_DIR})
 
 install(FILES view/pics/raptorarrows.svg DESTINATION ${DATA_INSTALL_DIR}/desktoptheme/default/widgets/)
+install(FILES view/pics/overlay.svg DESTINATION ${DATA_INSTALL_DIR}/desktoptheme/default/widgets/)
