--- a/plasma-applet-raptor.desktop
+++ b/plasma-applet-raptor.desktop
@@ -1,9 +1,10 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=raptor
-Comment=
+Name=Raptor Application Menu
+Comment=A launcher for your applications
 Type=Service
 ServiceTypes=Plasma/Applet
+Icon=start-here-kde
 
 X-KDE-Library=plasma_applet_raptor
 X-KDE-PluginInfo-Author=Riccardo Iaconelli
